<resources>
    <!-- Nome das strings: layout_tag_função -->
    <string name="app_name">Bike Ride</string>

    <!-- Main -->
    <string name="main_editText_login">Login</string>
    <string name="main_editText_password">Password</string>
    <string name="main_button_login">Login</string>
    <string name="main_textView_division">- or -</string>
    <string name="main_button_loginFacebook">Login with \n facebook</string>
    <string name="main_button_loginGoogle">Login with \n google</string>
    <string name="main_button_signUp">Sign up</string>
    <string name="main_button_lostData">I lost my \n login data</string>

    <!-- Tracking Delivery -->
    <string name="acompEntrega_textView_deliverName">Luana Fortes</string>
    <string name="acompEntrega_textView_deliverCount">112 delivers</string>
    <string name="acompEntrega_button_cancelDelivery">Cancel\nDelivery</string>

    <!-- Principal -->
    <string name="principal_EditText_endereco">Type your address</string>
    <string name="principal_button_pedirBike">Call Deliver</string>

    <!-- Review Delivery -->
    <string name="avaliar_textView_deliveryDistance">30km</string>
    <string name="avaliar_textView_deliveryTime">17 minutes</string>
    <string name="avaliar_textView_commentSugestion">Leave a comment about the delivery!</string>
    <string name="avaliar_editText_commentHint">Comment</string>
    <string name="avaliar_button_sendAvaliation">Submit</string>
    <string name="avaliar_textView_commentRecomendation">Leave a avaliation!</string>

    <!-- Menu -->
    <string name="drawer_open">Menu aberto</string>
    <string name="drawer_close">Menu fechado</string>
    <string name="weight">Weigth</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="length">Length</string>
    <string name="calculate">Calculate</string>

    <!-- Profile -->
    <string name="profile_txtView_rating">4,8 ★</string>
    <string name="profile_txtView_name">Name</string>
    <string name="profile_txtView_userName">Usuário</string>
    <string name="profile_txtView_userLastName">Mushmorrun King</string>
    <string name="profile_txtView_number">Number</string>
    <string name="profile_txtView_userNumber">202–555–0161</string>
    <string name="profile_txtView_email">E-mail</string>
    <string name="profile_txtView_userEmail">mario_princessboy@gmail.com</string>
    <string name="profile_txtView_password">Password</string>
    <string name="profile_txtView_userPassword">k!llB0ws4r</string>
    <string name="profile_txtView_lastName">Last Name</string>

    <!-- MODALS: Choose Delivery Address-->
    <string name="modal_choose_delivery_address_title">Choose delivery address</string>
    <string name="modal_choose_delivery_address_hint">Type here the delivery address</string>
    <string name="modal_choose_delivery_common_addresses_title">COMMON ADDRESSES</string>
    <string name="modal_choose_delivery_suggested_addresses_title">SUGGESTED ADDRESSES</string>
    <string name="sample_address_1">Rua Sen. Fraga 1001 - Manguinhos</string>
    <string name="sample_address_2">Av. Gomes Freire 290 - Centro</string>
    <string name="sample_address_3">Alameda Santos, 201/507 - Jardins</string>
    <string name="modal_choose_delivery_address_button_confirm_address">CONFIRM ADDRESS</string>

    <!-- MODALS: Choose Pickup Address -->
    <string name="modal_choose_pickup_address_title">Choose pickup address</string>
    <string name="modal_choose_pickup_address_hint">Type here the pickup address</string>
    <string name="modal_choose_pickup_common_addresses_title">COMMON ADDRESSES</string>
    <string name="sample_address_4">Rua Sen. Fraga 1001 - Manguinhos</string>
    <string name="sample_address_5">Av. Gomes Freire 290 - Centro</string>
    <string name="modal_choose_pickup_suggested_addresses_title">SUGGESTED ADDRESSES</string>
    <string name="sample_address_6">Alameda Santos, 201/507 - Jardins</string>

    <!-- MODALS: Delivery Addresss -->
    <string name="modal_delivery_addresses_title">Addresses</string>
    <string name="modal_delivery_addresses_pickup_title">PICKUP</string>
    <string name="modal_delivery_addresses_sender_hint">Type here the sender name</string>
    <string name="modal_delivery_addresses_choose_pickup_address_button">PRESS TO CHOOSE PICKUP ADDRESS</string>
    <string name="modal_delivery_addresses_delivery_title">DELIVERY</string>
    <string name="modal_delivery_addresses_receiver_hint">Type here the receiver name</string>
    <string name="modal_delivery_addresses_choose_delivery_address_buttons">PRESS TO CHOOSE DELIVERY ADDRESS</string>
    <string name="modal_delivery_addresses_get_estimates_button">GET ESTIMATES</string>

    <!-- MODALS: Package Information -->
    <string name="modal_package_information_title">Package Information</string>
    <string name="modal_package_information_type_title">TYPE</string>
    <string name="modal_package_information_mail_title">MAIL</string>
    <string name="modal_package_information_mail_description">Documents</string>
    <string name="modal_package_information_box_title">BOX</string>
    <string name="modal_package_information_box_description">Boxes, etc.</string>
    <string name="modal_package_information_unusual_title">UNUSUAL</string>
    <string name="modal_package_information_unusual_description">Unusual shape</string>
    <string name="modal_package_information_size_title">SIZE</string>
    <string name="modal_package_information_small_title">SMALL</string>
    <string name="modal_package_information_small_description">Up to 15cm</string>
    <string name="modal_package_information_medium_title">MEDIUM</string>
    <string name="modal_package_information_medium_description">Up to 40cm</string>
    <string name="modal_package_information_large_title">LARGE</string>
    <string name="modal_package_information_large_description">Up to 70cm</string>
    <string name="modal_package_information_enter_address_button">Enter pickup and delivery adresses</string>

    <!-- MODALS: Request Details -->
    <string name="modal_request_details_title">Request Details</string>
    <string name="modal_request_details_estimates_title">ESTIMATES</string>
    <string name="modal_request_details_pickup_title">PICKUP</string>
    <string name="modal_request_details_pickup_distance">2.6 km</string>
    <string name="modal_request_details_pickup_time">7 min.</string>
    <string name="modal_request_details_delivery_title">DELIVERY</string>
    <string name="modal_request_details_delivery_distance">3.2 km</string>
    <string name="modal_request_details_delivery_time">10 min.</string>
    <string name="modal_request_details_fee_title">FEE</string>
    <string name="modal_request_details_fee_value">R$ 12,50</string>
    <string name="modal_request_details_details_title">DETAILS</string>
    <string name="modal_request_details_details_package_size_small">Small package</string>
    <string name="modal_request_details_details_package_type_unusual">Odd shape</string>
    <string name="sample_address_7">Av. Gomes Freire, no. 418 / apto. 301 - ...</string>
    <string name="sample_address_8">Av. 20 de Abril, no. 48 / sl 2 - Centro</string>
    <string name="modal_request_details_confirm_request_button">CONFIRM BIKER REQUEST</string>

    <!-- MODALS: Searching biker -->
    <string name="modal_searching_biker_title">Biker Search</string>
    <string name="modal_searching_biker_caption">Finding biker ...</string>
    <string name="modal_searching_biker_cancel_button">Cancel search</string>
    <string name="awaiting_estimates">Awaiting Estimates</string>
    <string name="calculating">Calculating ...</string>


    <!-- Payment methods -->
    <string name="card_number">Card Number</string>
    <string name="expiration">Expiration</string>
    <string name="cvc">CVC</string>
    <string name="add_card">Add Card</string>
    <string name="card_name">Card Name</string>

    <!-- Facebook Auth -->
    <string name="facebook_app_id">250988672380164</string>
    <string name="fb_login_protocol_scheme">fb250988672380164</string>

    <!-- Sing Up -->
    <string name="signUp_editText_hint_email">Email</string>
    <string name="signUp_editText_hint_firstName">First Name</string>
    <string name="signUp_editText_hint_lastName">Last Name</string>


    <!-- MODALS: Change Name-->
    <string name="modalChangeName_txtView_changeName">Change Name</string>

    <!-- Main Delivery -->
    <string name="mainDelivery_button_requestDelivery">REQUEST DELIVERY</string>
    <string name="modalChangeName_edtText_changeNameHint">Type here to change your name</string>
    <string name="modalChangeName_button_changeName">change</string>
    <string name="modalChangeName_txtView_changeLastName">Change Last Name</string>
    <string name="modalChangeName_edtText_changeLastNameHint">Type here to change your Last Name</string>
    <string name="modalChangeName_txtView_changeNumber">Change Number</string>
    <string name="modalChangeName_edtText_changeNumberHint">Type here to change your Number</string>
    <string name="modalChangeName_edtText_changeEmailHint">Type here to change your E-mail</string>
    <string name="modalForgotPassword_txtView_forgotPassword">Forgot Password</string>
    <string name="forgotPassword_button_sendEmail">Reset Password</string>

</resources>
