<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".SingUpActivity"
android:orientation="vertical">

<ImageView
    android:id="@+id/logo"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:srcCompat="@drawable/bikeridelogohorizontal"
    android:background="@color/lightGray2"
    android:layout_weight="1"
    android:padding="12dp"/>

<LinearLayout
    android:id="@+id/loginpasswordcontainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="6dp">

    <EditText
        android:id="@+id/edtEmailSignUp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:hint="@string/signUp_editText_hint_email"
        android:background="@color/lightGray1"
        android:padding="12dp"
        android:layout_margin="6dp"/>

    <EditText
        android:id="@+id/edtPasswordSignUp"
        android:inputType="textPassword"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:hint="@string/main_editText_password"
        android:padding="12dp"
        android:background="@color/lightGray1"
        android:layout_margin="6dp"/>

    <EditText
        android:id="@+id/edtFirstNameSignUp"
        android:inputType="text"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:hint="@string/signUp_editText_hint_firstName"
        android:padding="12dp"
        android:background="@color/lightGray1"
        android:layout_margin="6dp"/>

    <EditText
        android:id="@+id/edtLastNameSignUp"
        android:inputType="text"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:hint="@string/signUp_editText_hint_lastName"
        android:padding="12dp"
        android:background="@color/lightGray1"
        android:layout_margin="6dp"/>


</LinearLayout>

<Button
    android:id="@+id/btnSignUpCad"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:layout_marginBottom="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/main_button_signUp"
    android:textAllCaps="true"
    android:textStyle="bold"
    android:textColor="@color/colorTextIcons"
    android:background="@color/colorAccent" />


</LinearLayout>