<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:background="@color/transparentBlack70"
    android:padding="16dp">

    <TextView
        android:id="@+id/packageInfoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/modal_delivery_addresses_title"
        android:textColor="@color/colorTextIcons"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/addressesCloseModals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cancel_black_24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="3dp"/>

    <ImageView
        android:id="@+id/addressesBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="3dp"/>

    <View
        android:id="@+id/packageInfoTitleDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/packageInfoTitle"
        android:layout_marginBottom="16dp"
        android:background="@color/colorDivider" />

    <RelativeLayout
        android:id="@+id/packageTypeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/packageInfoTitleDivider"
        android:background="@color/transparentWhite05"
        android:padding="8dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/pickupAddressTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/modal_delivery_addresses_pickup_title"
            android:textStyle="bold"
            android:padding="4dp"
            android:textColor="@color/colorTextIcons"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/senderNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/modal_delivery_addresses_sender_hint"
            android:layout_below="@id/pickupAddressTitle"
            android:background="@color/transparentWhite10"
            android:gravity="center"
            android:textColor="@color/colorDivider"
            android:textColorHint="@color/colorDivider"
            android:textSize="16dp"
            android:padding="14dp"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/choosePickupAddrBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/senderNameEditText"
            android:background="@color/colorAccent"
            android:text="@string/modal_delivery_addresses_choose_pickup_address_button"
            android:textColor="@color/colorTextIcons" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/packageSizeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/packageTypeContainer"
        android:background="@color/transparentWhite05"
        android:padding="8dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/receiverHeaderEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/modal_delivery_addresses_delivery_title"
            android:textStyle="bold"
            android:textColor="@color/colorTextIcons"
            android:padding="8dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/receiverNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/modal_delivery_addresses_receiver_hint"
            android:layout_below="@id/receiverHeaderEditText"
            android:background="@color/transparentWhite10"
            android:gravity="center"
            android:textColor="@color/colorDivider"
            android:textColorHint="@color/colorDivider"
            android:textSize="16dp"
            android:padding="14dp"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/chooseDeliveryAddrBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/receiverNameEditText"
            android:background="@color/colorAccent"
            android:text="@string/modal_delivery_addresses_choose_delivery_address_buttons"
            android:textColor="@color/colorTextIcons" />



    </RelativeLayout>

    <Button
        android:id="@+id/getEstimatesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/packageSizeContainer"
        android:layout_centerHorizontal="true"
        android:text="@string/modal_delivery_addresses_get_estimates_button"
        android:background="@color/colorAccent"
        android:visibility="gone"
        android:textColor="@color/colorTextIcons"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="PLEASE FILL NAMES AND ADDRESSES"
        android:layout_below="@id/packageSizeContainer"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorTextIcons"
        android:background="@color/colorPrimaryText"

        />

</RelativeLayout>