<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/modalBikerSearchContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:background="@color/transparentBlack70"
    android:padding="16dp">

    <TextView
        android:id="@+id/packageInfoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/modal_searching_biker_title"
        android:textColor="@color/colorTextIcons"
        android:textSize="20dp" />

    <View
        android:id="@+id/bikerSearchTitleDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/packageInfoTitle"
        android:layout_marginBottom="16dp"
        android:background="@color/colorDivider" />

    <ImageView
        android:id="@+id/bikerSearchWaitingWheel"
        android:layout_below="@id/bikerSearchTitleDivider"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:src="@drawable/bikewheel"/>


    <RelativeLayout
        android:id="@+id/packageSizeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bikerSearchWaitingWheel"
        android:background="@color/transparentWhite05"
        android:padding="8dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/packageSizeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/modal_searching_biker_caption"
            android:textStyle="bold"
            android:textColor="@color/colorTextIcons"
            android:padding="4dp"/>


    </RelativeLayout>

    <Button
        android:id="@+id/bikerSearchCancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/packageSizeContainer"
        android:layout_centerHorizontal="true"
        android:text="@string/modal_searching_biker_cancel_button"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextIcons"/>

</RelativeLayout>